--- a/Cargo.toml
+++ b/Cargo.toml
@@ -75,5 +75,5 @@ rev = "d3792352992a539afffbe11501d1aff9fd5b919d" # add-peer branch
 
 # not yet published on crates.io
 [patch.crates-io.electrumd]
-git = "https://github.com/shesek/electrumd"
-rev = "6eac0b7b1f2447472016e2c1473a6284f7f8648e"
+git = "https://github.com/delta1/electrumd"
+rev = "687599aecbd19237f5a48294f3a1fe3365021cac"
